{
    "name": "InsectDefenseInputs",
    "maps": [
        {
            "name": "Player",
            "id": "828dc39d-cd1c-41ae-859d-97917a02e89c",
            "actions": [
                {
                    "name": "Player_Look",
                    "type": "Value",
                    "id": "570b2447-e43b-4512-86bc-df9f003a469b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Player_Pause",
                    "type": "Button",
                    "id": "15f17a7c-cc69-4d49-b6c1-4a3472c0301b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Settings",
                    "type": "Button",
                    "id": "90d4bd21-6131-43f9-b840-d0053724b92c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Load",
                    "type": "Button",
                    "id": "b364da0d-ea37-4688-bc8a-51aa138da27e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Deselect",
                    "type": "Button",
                    "id": "de95a48e-cca3-47e5-8cd0-e30ae2f5f8cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player_Zoom",
                    "type": "Value",
                    "id": "ea7c22c3-3963-43bb-9f8f-ad4ade8997c8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6205db0c-d6f2-432e-af6d-11ad351882ac",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8418f1b5-9ce5-42a3-93a1-99a5ae296caa",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Settings",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "48c2f938-29c7-4fe1-b3ea-57c2a9c19580",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "9d732597-5598-4b46-9ae3-aa5d3677accd",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Up",
                    "id": "31040fe8-95e5-4f2b-b335-472cee8a5fcb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "a3ab8808-6f1c-4918-820e-e03487f43331",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "f1396980-ba88-4f7a-82d0-606eabc91e94",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "8b24deb5-5f74-44c8-ab43-b6d6a1fa9f16",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "0419fb02-5c1f-4c2b-94c1-4c359746af1a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "4e8c431e-9a8d-45d7-9a06-68516518c9df",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "55f74bc0-dcee-4da4-9fb2-293727a15481",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6d485a6d-e742-445b-a3f3-3df17d01cb73",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Load",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fa80bb4-5696-4b5c-a079-78053a0241d7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Deselect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c94a7ad-d48e-49f2-8182-ae3d94ecbfa3",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player_Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "LoadScreen",
            "id": "be7f319d-349b-47bd-8b0c-1908e51ce2be",
            "actions": [
                {
                    "name": "LoadScreen_Close",
                    "type": "Button",
                    "id": "fea9fc92-fc5f-43fb-936e-d2bb11264c0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "570cb489-1a31-4d89-8269-c7e4810aba66",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LoadScreen_Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SettingsScreen",
            "id": "9498d387-33a9-4e72-a830-d6f68ff08546",
            "actions": [
                {
                    "name": "SettingsScreen_Close",
                    "type": "Button",
                    "id": "657a44ce-5f3c-4046-8c95-1c9eca2269cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "30cc4392-ba7d-4c45-8bf6-2a3bb002a8ea",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SettingsScreen_Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Lab",
            "id": "21a33038-7127-484d-ad78-bb4c94ef4116",
            "actions": [
                {
                    "name": "Lab_Load",
                    "type": "Button",
                    "id": "354afb95-6c4f-43f5-9541-13820503266e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lab_Settings",
                    "type": "Button",
                    "id": "38659155-2f90-4dc0-8374-3e8b00d71c4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0672a798-0bc2-415d-b161-18cba65743f3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lab_Load",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd452e17-cf59-4d45-b202-991011c03560",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lab_Settings",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}